--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,25 @@
 language: python
 
-env:
-  global:
-    - NO_NET=1
-
-git:
-    depth: 1000
-
 matrix:
   include:
       - python: 3.6
         dist: trusty
         sudo: false
-        before_script:
-          - "export DISPLAY=:99.0"
-          - "sh -e /etc/init.d/xvfb start"
-          - sleep 3 # give xvfb some time to start
       - python: 3.7
         dist: xenial
         sudo: true
-        services:
-          - xvfb
 
-# Install dependencies
-install:
-    - pip install -r requirements.txt
-    - pip install -e .
+before_install:
+    - python --version
     - pip install --upgrade pip
-    - pip install pytest-cov
-    - pip install codacy-coverage
+    - pip install -U pytest
+    - pip install codecov
 
-# command to run tests
+install:
+    - pip install ".[test]"
+
 script:
-   - py.test ./tests --cov=hgc --cov-report=xml
+   - pytest
 
 after_success:
-   - python-codacy-coverage -r coverage.xml
+   - codecov
