--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,5 @@
 [pytest]
-testpaths =
-    tests
-norecursedirs=dist build .tox scripts
+norecursedirs= build scripts
 addopts =
-    --doctest-modules
-    --cov=hgc
     -r a
     -v
