--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,10 @@ xlrd>=1.0.0
 phreeqpython>=1.3.2
 pytest
 scipy
+
+# developers:
+# numpydoc
+# sphinx_rtd_theme
+# pytest
+# jupyter-sphinx?
+# matplotlib?
