Added folders to ignore by pytest discovery

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
-norecursedirs= build scripts
+norecursedirs= build scripts docs *.egg-info .git __pycache__ .tox
 addopts =
     -r a
-    -v
+    -vv
 junit_family=legacy
