use_alkanitiy is added to consolidate function
alkalinity is often reported by labs as hco3, so it is convenient for
  most users to easily change it to the correct column name

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@ hgc.code-workspace
 # files that are created on the fly
 hgc/constants/constants.pickle
 docs/source/_build
+hgc/constants/default_features_alias99.xlsx
