moved/renamed NER and other MvdS files, NER NOT working
- NER gives erros when importing
- Renamed files to be more sensible
- Unit tests of NER and IO do not work.
- Unit tests of other modules are succesful
- documentation is now rendered. But documentation of IO and NER has
  errors in all ipython blocks (because importing already fails)
- added docutils.conf to allow for inline code highlighting
- Updated requirements.txt
- Added requirements-dev.txt for developers (e.g. packages required to
  compile documentation and run unit tests)
- .gitignore pickle files

--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,11 @@ hgc/constants/constants.pickle
 docs/source/_build
 hgc/constants/default_features_alias99.xlsx
 docs/source/api/*
+*.pkl
+.google-cookie
+.pylint.d
+hgc/constants/default_features_alias 20201112.xlsx
+hgc/constants/default_features_alias 20201122.xlsx
+hgc/constants/default_features_alias 20210203.xlsx
+hgc/constants/default_features_alias 20210204.xlsx
+hgc/constants/default_features_alias 20210205.xlsx
